removed wordwrap indicator

--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -24,7 +24,7 @@
     }
   },
   "navigationSettings": {
-    "message": "Nastave&shy;ní",
+    "message": "Nastavení",
     "description": "Settings"
   },
   "navigationGestures": {
@@ -942,7 +942,7 @@
     "description": "Restore"
   },
   "aboutReset": {
-    "message": "Vý&shy;cho&shy;zí nas&shy;ta&shy;ve&shy;ní",
+    "message": "Výchozí nastavení",
     "description": "Reset"
   },
   "aboutRestoreNotificationSuccess": {
