--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -24,7 +24,7 @@
     }
   },
   "navigationSettings": {
-    "message": "Einstel&shy;lungen",
+    "message": "Einstellungen",
     "description": "Settings"
   },
   "navigationGestures": {
