--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -24,7 +24,7 @@
     }
   },
   "navigationSettings": {
-    "message": "На&shy;строй&shy;ки",
+    "message": "Настройки",
     "description": "Settings"
   },
   "navigationGestures": {
