added basis for white theme

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1058,6 +1058,10 @@
     "message": "Darker",
     "description": "Darker"
   },
+  "whiteTheme": {
+    "message": "White",
+    "description": "White"
+  },
   "defaultTheme": {
     "message": "Default",
     "description": "Default"
